Fix word overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -905,7 +905,7 @@ footer .copyright::before {
     font-size: 1.2rem;
   }
   .info span {
-    font-size: 0.8rem;
+    font-size: 0.65rem;
     margin-left: 0;
   }
   .social-media i {
